--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
   <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
-
 <body>
 
   <header class="header">
@@ -29,7 +27,7 @@
           <div class="header__profile">
             <div class="header__avatar">
               <a class="header__avatar-link" href="#">
-                <img class="header__avatar-img" src="images/avatar.png" alt="">
+                <img class="header__avatar-img" src="images/content/avatar.png" alt="">
               </a>
             </div>
             <div class="header__text">
@@ -70,7 +68,6 @@
             <input class="header__search" type="text" placeholder="Search product here...">
             <button class="header__search-btn" type="search">Search</button>
           </form>
-          
         </div>
       </div>
     </div>
@@ -108,7 +105,41 @@
 
   <section class="features">
     <div class="container">
-      
+      <div class="features__inner">
+        <div class="features__item">
+          <img class="feature__img" src="images/content/research.jpg" alt="feature">
+          <div class="features__title">
+            Best UX Research
+          </div>
+          <p class="features__text">
+            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+            the mattis, leo quam aliquet diam
+            congue is laoreet elit metus.
+          </p>
+        </div>
+        <div class="features__item features__item--middle">
+          <img class="feature__img" src="images/content/responsive.jpg" alt="feature">
+          <div class="features__title">
+            Fully Responsive
+          </div>
+          <p class="features__text">
+            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+            the mattis, leo quam aliquet diam
+            congue is laoreet elit metus.
+          </p>
+        </div>
+        <div class="features__item features__item--right">
+          <img class="feature__img" src="images/content/buyandsell.jpg" alt="feature">
+          <div class="features__title">
+            Buy & Sell Easily
+          </div>
+          <p class="features__text">
+            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+            the mattis, leo quam aliquet diam
+            congue is laoreet elit metus.
+          </p>
+        </div>
+      </div>
     </div>
   </section>
 
