--- a/app/index.html
+++ b/app/index.html
@@ -143,6 +143,48 @@
     </div>
   </section>
 
+  <section class="products-slider">
+    <div class="container">
+      <div class="products-slider__top">
+        <div class="products-slider__title">
+          Weekly Featured Products
+        </div>
+      </div>
+      <div class="products-slider__slider-inner">
+        <div class="products-slider__item">
+          <img class="products-slider__img" src="images/content/slider-img.jpg" alt="img" >
+          <div class="products-slider__content">
+            <div class="products-slider__heading">
+              One Page Resume Template
+            </div>
+            <div class="products-slider__info">
+              <img class="products-slider__avatar" src="images/content/slider-avatar.jpg" alt="avatar">
+              <span class="products-slider__name">AazzTech</span>
+              <span class="products-slider__category">WordPress</span>
+            </div>
+            <p class="products-slider__text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.
+            </p>
+            <div class="products-slider__types">
+              <a class="products-slider__type" href="#">website</a>
+              <a class="products-slider__type" href="#">plugin</a>
+              <a class="products-slider__type" href="#">landing page</a>
+            </div>
+            <div class="products-slider__feedback">
+              <a class="products-slider__price" href="#">$10 - $50</a>
+              <a class="products-slider__likes" href="#">46</a>
+              <a class="products-slider__number" href="#">634</a>
+              <div class="products__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </div>
+  </section>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="libs.js"></script>
   <script src="js/main.min.js"></script>
