--- a/app/index.html
+++ b/app/index.html
@@ -250,6 +250,310 @@
     </div>
   </section>
 
+  <section class="products">
+    <div class="container">
+      <div class="products__top">
+        <div class="products__title">
+          Newest Release Products
+        </div>
+        <div class="products__filter">
+          <span class="products__filter-text">
+            Filter by:
+          </span>
+          <button class="products__filter-btn"></button>
+        </div>
+      </div>
+      <ul class="products__categories">
+        <li class="products__categories-item">
+          <button class="products__categories-btn" type="button" data-filter=".category-plugins">Plugins</button>
+        </li>
+        <li class="products__categories-item">
+          <button class="products__categories-btn" type="button" data-filter=".category-wordpress">WordPress</button>
+        </li>
+        <li class="products__categories-item">
+          <button class="products__categories-btn" type="button" data-filter=".category-site">Site Template</button>
+        </li>
+        <li class="products__categories-item">
+          <button class="products__categories-btn" type="button" data-filter=".category-psd">PSD Template</button>
+        </li>
+        <li class="products__categories-item">
+          <button class="products__categories-btn" type="button" data-filter=".category-joomla">Joomla</button>
+        </li>
+        <li class="products__categories-item">
+          <button class="products__categories-btn" type="button" data-filter=".category-interface">User Interface</button>
+        </li>
+        <li class="products__categories-item">
+          <button class="products__categories-btn" type="button" data-filter=".category-landing">Landing Page</button>
+        </li>
+        <li class="products__categories-item">
+          <button class="products__categories-btn" type="button" data-filter=".category-software">Software</button>
+        </li>
+      </ul>
+      <div class="products__inner">
+        <div class="products__item mix category-plugins category-new" data-order="1">
+          <!-- start hover block -->
+          <div class="products__item-hover">
+            <button class="products__hover-btn">More Info</button>
+            <button class="products__hover-btn">Live Demo</button>
+          </div>
+          <!-- end hover block -->
+          <img class="products__item-img" src="images/content/products-img2.jpg"></img>
+          <div class="products__item-content">
+            <div class="products__item-text">
+              <div class="products__item-title">
+                E-commerce Shopping Cart
+              </div>
+              <div class="products__item-info">
+                <img class="products__item-avatar" src="images/content/slider-avatar.jpg"></img>
+                <div class="products__item-name">
+                  Theme-Valley
+                </div>
+                <div class="products__item-category">
+                  Plugin
+                </div>
+              </div>
+              <div class="products__item-paragraph">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                the mattis, leo quam aliquet congue.
+              </div>
+            </div>
+            <div class="products__item-feedback" href="#">
+              <div class="products__item-wrapper">
+                <a class="products__item-price" href="#">
+                  $20
+                </a>
+                <a class="products__item-likes" href="#">
+                  90
+                </a>
+              </div>
+              <a class="products__item-number" href="#">
+                246
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="products__item mix category-psd" data-order="2">
+          <!-- start hover block -->
+          <div class="products__item-hover">
+            <button class="products__hover-btn">More Info</button>
+            <button class="products__hover-btn">Live Demo</button>
+          </div>
+          <!-- end hover block -->
+          <img class="products__item-img" src="images/content/products-img1.jpg"></img>
+          <div class="products__item-content">
+            <div class="products__item-text">
+              <div class="products__item-title">
+                Marketify Coffee Shop
+              </div>
+              <div class="products__item-info">
+                <img class="products__item-avatar" src="images/content/slider-avatar.jpg"></img>
+                <div class="products__item-name">
+                  EchoTheme
+                </div>
+                <div class="products__item-category products__item-category--psd">
+                  PSD
+                </div>
+              </div>
+              <div class="products__item-paragraph">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                the mattis, leo quam aliquet congue.
+              </div>
+            </div>
+            <div class="products__item-feedback" href="#">
+              <div class="products__item-wrapper">
+                <a class="products__item-price" href="#">
+                  $18
+                </a>
+                <a class="products__item-likes" href="#">
+                  48
+                </a>
+              </div>
+              <a class="products__item-number" href="#">
+                50
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="products__item mix category-site" data-order="2">
+          <!-- start hover block -->
+          <div class="products__item-hover">
+            <button class="products__hover-btn">More Info</button>
+            <button class="products__hover-btn">Live Demo</button>
+          </div>
+          <!-- end hover block -->
+          <img class="products__item-img" src="images/content/products-img2.jpg"></img>
+          <div class="products__item-content">
+            <div class="products__item-text">
+              <div class="products__item-title">
+                Bryson - Portfolio Template
+              </div>
+              <div class="products__item-info">
+                <img class="products__item-avatar" src="images/content/slider-avatar.jpg"></img>
+                <div class="products__item-name">
+                  Artcorner
+                </div>
+                <div class="products__item-category products__item-category--html">
+                  HTML
+                </div>
+              </div>
+              <div class="products__item-paragraph">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                the mattis, leo quam aliquet congue.
+              </div>
+            </div>
+            <div class="products__item-feedback" href="#">
+              <div class="products__item-wrapper">
+                <a class="products__item-price" href="#">
+                  $10
+                </a>
+                <a class="products__item-likes" href="#">
+                  56
+                </a>
+              </div>
+              <a class="products__item-number" href="#">
+                68
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="products__item mix category-plugins category-new" data-order="1">
+          <!-- start hover block -->
+          <div class="products__item-hover">
+            <button class="products__hover-btn">More Info</button>
+            <button class="products__hover-btn">Live Demo</button>
+          </div>
+          <!-- end hover block -->
+          <img class="products__item-img" src="images/content/products-img2.jpg"></img>
+          <div class="products__item-content">
+            <div class="products__item-text">
+              <div class="products__item-title">
+                E-commerce Shopping Cart
+              </div>
+              <div class="products__item-info">
+                <img class="products__item-avatar" src="images/content/slider-avatar.jpg"></img>
+                <div class="products__item-name">
+                  Design-Hub
+                </div>
+                <div class="products__item-category">
+                  Plugin
+                </div>
+              </div>
+              <div class="products__item-paragraph">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                the mattis, leo quam aliquet congue.
+              </div>
+            </div>
+            <div class="products__item-feedback" href="#">
+              <div class="products__item-wrapper">
+                <a class="products__item-price" href="#">
+                  $10 - 50
+                </a>
+                <a class="products__item-likes" href="#">
+                  90
+                </a>
+              </div>
+              <a class="products__item-number" href="#">
+                45
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="products__item mix category-psd" data-order="2">
+          <!-- start hover block -->
+          <div class="products__item-hover">
+            <button class="products__hover-btn">More Info</button>
+            <button class="products__hover-btn">Live Demo</button>
+          </div>
+          <!-- end hover block -->
+          <img class="products__item-img" src="images/content/products-img1.jpg"></img>
+          <div class="products__item-content">
+            <div class="products__item-text">
+              <div class="products__item-title">
+                Marketify Coffee Shop
+              </div>
+              <div class="products__item-info">
+                <img class="products__item-avatar" src="images/content/slider-avatar.jpg"></img>
+                <div class="products__item-name">
+                  AazzTech
+                </div>
+                <div class="products__item-category products__item-category--psd">
+                  PSD
+                </div>
+              </div>
+              <div class="products__item-paragraph">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                the mattis, leo quam aliquet congue.
+              </div>
+            </div>
+            <div class="products__item-feedback" href="#">
+              <div class="products__item-wrapper">
+                <a class="products__item-price" href="#">
+                  $10 - 50
+                </a>
+                <a class="products__item-likes" href="#">
+                  48
+                </a>
+              </div>
+              <a class="products__item-number" href="#">
+                50
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="products__item mix category-site" data-order="2">
+          <!-- start hover block -->
+          <div class="products__item-hover">
+            <button class="products__hover-btn">More Info</button>
+            <button class="products__hover-btn">Live Demo</button>
+          </div>
+          <!-- end hover block -->
+          <img class="products__item-img" src="images/content/products-img2.jpg"></img>
+          <div class="products__item-content">
+            <div class="products__item-text">
+              <div class="products__item-title">
+                Bryson - Portfolio Template
+              </div>
+              <div class="products__item-info">
+                <img class="products__item-avatar" src="images/content/slider-avatar.jpg"></img>
+                <div class="products__item-name">
+                  Coder-Lab
+                </div>
+                <div class="products__item-category products__item-category--html">
+                  HTML
+                </div>
+              </div>
+              <div class="products__item-paragraph">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                the mattis, leo quam aliquet congue.
+              </div>
+            </div>
+            <div class="products__item-feedback" href="#">
+              <div class="products__item-wrapper">
+                <a class="products__item-price" href="#">
+                  $10
+                </a>
+                <a class="products__item-likes" href="#">
+                  56
+                </a>
+              </div>
+              <a class="products__item-number" href="#">
+                68
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button class="products__btn" type="button">
+        All New Products
+      </button>
+    </div>
+  </section>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
