--- a/app/index.html
+++ b/app/index.html
@@ -594,6 +594,216 @@
         </button>
       </div>
     </section>
+
+    <section class="followers">
+      <div class="container">
+        <div class="followers__top">
+          <div class="followers__title">
+            Your Followers Feed
+          </div>
+          <div class="followers__btn"></div>
+        </div>
+        <div class="followers__slider-inner">
+          <div class="followers__item">
+            <div class="followers__img-wrapper">
+              <img class="followers__item-img" src="images/content/products-img2.jpg">
+              <div class="followers__item-hover">
+                <!-- start hover block -->
+                <a class="followers__hover-btn" href="#">More Info</a>
+                <a class="followers__hover-btn" href="#">Live Demo</a>
+                <!-- end hover block -->
+              </div>
+            </div>
+            <div class="followers__item-content">
+              <div class="followers__item-text">
+                <div class="followers__item-title">
+                  E-commerce Shopping Cart
+                </div>
+                <div class="followers__item-info">
+                  <img class="followers__item-avatar" src="images/content/slider-avatar.jpg"></img>
+                  <div class="followers__item-name">
+                    Theme-Valley
+                  </div>
+                  <div class="followers__item-category">
+                    HTML
+                  </div>
+                </div>
+                <div class="followers__item-paragraph">
+                  Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                  the mattis, leo quam aliquet congue.
+                </div>
+              </div>
+              <div class="followers__item-feedback" href="#">
+                <div class="followers__item-wrapper">
+                  <a class="followers__item-price" href="#">
+                    $20
+                  </a>
+                  <a class="followers__item-likes" href="#">
+                    90
+                  </a>
+                  <div class="products__item-star">
+                    <div class="rate-star"></div>
+                  </div>
+                </div>
+                <a class="followers__item-number" href="#">
+                  246
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="followers__item">
+            <div class="followers__img-wrapper">
+              <img class="followers__item-img" src="images/content/products-img1.jpg">
+              <div class="followers__item-hover">
+                <!-- start hover block -->
+                <a class="followers__hover-btn" href="#">More Info</a>
+                <a class="followers__hover-btn" href="#">Live Demo</a>
+                <!-- end hover block -->
+              </div>
+            </div>
+            <div class="followers__item-content">
+              <div class="followers__item-text">
+                <div class="followers__item-title">
+                  Marketify Coffee Shop
+                </div>
+                <div class="followers__item-info">
+                  <img class="followers__item-avatar" src="images/content/slider-avatar.jpg"></img>
+                  <div class="followers__item-name">
+                    EchoTheme
+                  </div>
+                  <div class="followers__item-category followers__item-category--psd">
+                    PSD
+                  </div>
+                </div>
+                <div class="followers__item-paragraph">
+                  Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                  the mattis, leo quam aliquet congue.
+                </div>
+              </div>
+              <div class="followers__item-feedback" href="#">
+                <div class="followers__item-wrapper">
+                  <a class="followers__item-price" href="#">
+                    $18
+                  </a>
+                  <a class="followers__item-likes" href="#">
+                    48
+                  </a>
+                  <div class="products__item-star">
+                    <div class="rate-star"></div>
+                  </div>
+                </div>
+                <a class="followers__item-number" href="#">
+                  50
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="followers__item">
+            <div class="followers__img-wrapper">
+              <img class="followers__item-img" src="images/content/products-img2.jpg">
+              <div class="followers__item-hover">
+                <!-- start hover block -->
+                <a class="followers__hover-btn" href="#">More Info</a>
+                <a class="followers__hover-btn" href="#">Live Demo</a>
+                <!-- end hover block -->
+              </div>
+            </div>
+            <div class="followers__item-content">
+              <div class="followers__item-text">
+                <div class="followers__item-title">
+                  Bryson - Portfolio Template
+                </div>
+                <div class="followers__item-info">
+                  <img class="followers__item-avatar" src="images/content/slider-avatar.jpg"></img>
+                  <div class="followers__item-name">
+                    Coder-Lab
+                  </div>
+                  <div class="followers__item-category followers__item-category--html">
+                    HTML
+                  </div>
+                </div>
+                <div class="followers__item-paragraph">
+                  Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                  the mattis, leo quam aliquet congue.
+                </div>
+              </div>
+              <div class="followers__item-feedback" href="#">
+                <div class="followers__item-wrapper">
+                  <a class="followers__item-price" href="#">
+                    $10
+                  </a>
+                  <a class="followers__item-likes" href="#">
+                    56
+                  </a>
+                  <div class="products__item-star">
+                    <div class="rate-star"></div>
+                  </div>
+                </div>
+                <a class="followers__item-number" href="#">
+                  68
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="followers__item">
+            <div class="followers__img-wrapper">
+              <img class="followers__item-img" src="images/content/products-img2.jpg">
+              <div class="followers__item-hover">
+                <!-- start hover block -->
+                <a class="followers__hover-btn" href="#">More Info</a>
+                <a class="followers__hover-btn" href="#">Live Demo</a>
+                <!-- end hover block -->
+              </div>
+            </div>
+            <div class="followers__item-content">
+              <div class="followers__item-text">
+                <div class="followers__item-title">
+                  Bryson - Portfolio Template
+                </div>
+                <div class="followers__item-info">
+                  <img class="followers__item-avatar" src="images/content/slider-avatar.jpg"></img>
+                  <div class="followers__item-name">
+                    Coder-Lab
+                  </div>
+                  <div class="followers__item-category followers__item-category--html">
+                    HTML
+                  </div>
+                </div>
+                <div class="followers__item-paragraph">
+                  Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                  the mattis, leo quam aliquet congue.
+                </div>
+              </div>
+              <div class="followers__item-feedback" href="#">
+                <div class="followers__item-wrapper">
+                  <a class="followers__item-price" href="#">
+                    $10
+                  </a>
+                  <a class="followers__item-likes" href="#">
+                    56
+                  </a>
+                  <div class="products__item-star">
+                    <div class="rate-star"></div>
+                  </div>
+                </div>
+                <a class="followers__item-number" href="#">
+                  68
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="statistics">
+      <div class="container">
+
+      </div>
+    </section>
   </main>
 
 
