--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MartPlace | Home page</title>
-  <link rel="stylesheet" href="css/libs.min.css">
   <link rel="shortcut icon" type="image/png" href="images/icons/favicon.ico"/>
+  <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -17,27 +17,30 @@
           <a class="header__logo-link" href="#">
             <img class="header__logo" src="images/Logo.png" alt="logo">
           </a>
-          <button class="header__btn" type="button">
+          <a class="header__btn" href="#">
             Become a Seller
-          </button>
+          </a>
           <div class="header__icons">
-            <div class="header__icon"><a class="header__icon-link" href="#" ></a></div>
-            <div class="header__icon"><a class="header__icon-link header__icon-link--middle" href="#"></a></div>
-            <div class="header__icon"><a class="header__icon-link header__icon-link--right" href="#" ></a></div>
+            <div class="header__icon">
+              <a class="header__icon-link" href="#" ></a>
+              <a class="header__icon-number" href="#" >25</a>
+            </div>
+            <div class="header__icon">
+              <a class="header__icon-link header__icon-link--middle" href="#"></a>
+              <a class="header__icon-number header__icon-number--middle" href="#" >6</a>
+            </div>
+            <div class="header__icon">
+              <a class="header__icon-link header__icon-link--right" href="#" ></a>
+              <a class="header__icon-number header__icon-number--right" href="#" >2</a>
+            </div>
           </div>
           <div class="header__profile">
-            <div class="header__avatar">
-              <a class="header__avatar-link" href="#">
-                <img class="header__avatar-img" src="images/content/avatar.png" alt="avatar">
-              </a>
-            </div>
+            <a class="header__avatar" href="#">
+              <img class="header__avatar-img" src="images/content/avatar.png" alt="avatar">
+            </a>
             <div class="header__text">
-              <div class="header__name">
-                <a class="header__name-link" href="#">Taofiq Hakim</a>
-              </div>
-              <div class="header__balance">
-                <a class="header__balance-link" href="#">$20.45</a>
-              </div>
+                <a class="header__name" href="#">Taofiq Hakim</a>
+                <a class="header__balance" href="#">$20.45</a>
             </div>
           </div>
         </div>
@@ -48,19 +51,19 @@
         <div class="header__bottom-inner">
           <nav class="header__menu">
             <ul class="header__list">
-              <li class="header__list-item">
+              <li class="header__item">
                 <a class="header__link" href="#">home</a>
               </li>
-              <li class="header__list-item">
+              <li class="header__item">
                 <a class="header__link" href="#">all products</a>
               </li>
-              <li class="header__list-item">
+              <li class="header__item">
                 <a class="header__link" href="#">wordpress</a>
               </li>
-              <li class="header__list-item">
+              <li class="header__item">
                 <a class="header__link" href="#">features</a>
               </li>
-              <li class="header__list-item">
+              <li class="header__item">
                 <a class="header__link" href="#">pages</a>
               </li>
             </ul>
@@ -81,13 +84,13 @@
         <div class="search__inner">
           <div class="search__title">
             Create Your Own
-            <span class="search__title--bold">Digital Product Marketplace</span>
+            <span class="search__title search__title--bold">Digital Product Marketplace</span>
           </div>
           <div class="search__text">
             MartPlace is the most powerful, & customizable template for Easy Digital Downloads Products
           </div>
-          <button class="search__btn" type="button" >View All Products</button>
-          <button class="search__btn" type="button" >Popular Products</button>
+          <a class="search__btn" href="#">View All Products</a>
+          <a class="search__btn" href="#">Popular Products</a>
           <form class="search__form">
             <label class="label" for="search__search">search</label>
             <input class="search__search" type="search" name="search" placeholder="Search your products...">
@@ -112,7 +115,7 @@
       <div class="container">
         <div class="features__inner">
           <div class="features__item">
-            <img class="feature__img" src="images/content/research.jpg" alt="feature">
+            <img class="features__img" src="images/content/research.jpg" alt="feature">
             <div class="features__title">
               Best UX Research
             </div>
@@ -158,15 +161,25 @@
         </div>
         <div class="products-slider__slider-inner">
           <div class="products-slider__item">
-            <img class="products-slider__img" src="images/content/slider-img.jpg" alt="img1" >
+            <div class="products-slider__img-wrapper">
+              <img class="products-slider__img" src="images/content/slider-img.jpg" alt="img1">
+              <!-- start hover block -->
+              <div class="products-slider__hover">
+                <a class="products__hover-btn" href="#">More Info</a>
+                <a class="products__hover-btn" href="#">Live Demo</a>
+              </div>
+              <!-- end hover block -->
+            </div>
             <div class="products-slider__wrapper">
               <div class="products-slider__content">
                 <div class="products-slider__heading">
                   One Page Resume Template
                 </div>
                 <div class="products-slider__info">
-                  <img class="products-slider__avatar" src="images/content/slider-avatar.jpg" alt="avatar">
-                  <span class="products-slider__name">AazzTech</span>
+                  <a class="products-slider__avatar-link" href="#">
+                    <img class="products-slider__avatar" src="images/content/slider-avatar.jpg" alt="avatar">
+                    <span class="products-slider__name">AazzTech</span>
+                  </a>
                   <span class="products-slider__category">WordPress</span>
                 </div>
                 <p class="products-slider__text">
@@ -179,8 +192,8 @@
                 </div>
                 <div class="products-slider__feedback">
                   <a class="products-slider__price" href="#">$10 - $50</a>
-                  <a class="products-slider__likes" href="#">46</a>
-                  <a class="products-slider__number" href="#">634</a>
+                  <button class="products-slider__likes" type="submit">46</button>
+                  <button class="products-slider__number" type="submit">634</button>
                   <div class="products__item-star">
                     <div class="rate-star"></div>
                   </div>
@@ -322,12 +335,12 @@
             
             <div class="products__img-wrapper">
               <img class="products__item-img" src="images/content/products-img2.jpg">
+              <!-- start hover block -->
               <div class="products__item-hover">
-                <!-- start hover block -->
                 <a class="products__hover-btn" href="#">More Info</a>
                 <a class="products__hover-btn" href="#">Live Demo</a>
-                <!-- end hover block -->
               </div>
+              <!-- end hover block -->
             </div>
             <div class="products__item-content">
               <div class="products__item-text">
@@ -335,13 +348,11 @@
                   E-commerce Shopping Cart
                 </div>
                 <div class="products__item-info">
-                  <img class="products__item-avatar" src="images/content/slider-avatar.jpg"></img>
-                  <div class="products__item-name">
-                    Theme-Valley
-                  </div>
-                  <div class="products__item-category">
-                    Plugin
-                  </div>
+                  <a class="products-slider__avatar-link" href="#">
+                    <img class="products__item-avatar" src="images/content/slider-avatar.jpg" alt="avatar">
+                    <span class="products__item-name">Theme-Valley</span>
+                  </a>
+                  <span class="products__item-category">Plugin</span>
                 </div>
                 <div class="products__item-paragraph">
                   Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
@@ -367,12 +378,12 @@
           <div class="products__item mix category-psd" data-order="2">
             <div class="products__img-wrapper">
               <img class="products__item-img" src="images/content/products-img1.jpg">
+              <!-- start hover block -->
               <div class="products__item-hover">
-                <!-- start hover block -->
                 <a class="products__hover-btn" href="#">More Info</a>
                 <a class="products__hover-btn" href="#">Live Demo</a>
-                <!-- end hover block -->
               </div>
+              <!-- end hover block -->
             </div>
             <div class="products__item-content">
               <div class="products__item-text">
@@ -380,13 +391,11 @@
                   Marketify Coffee Shop
                 </div>
                 <div class="products__item-info">
-                  <img class="products__item-avatar" src="images/content/slider-avatar.jpg"></img>
-                  <div class="products__item-name">
-                    EchoTheme
-                  </div>
-                  <div class="products__item-category products__item-category--psd">
-                    PSD
-                  </div>
+                  <a class="products-slider__avatar-link" href="#">
+                    <img class="products__item-avatar" src="images/content/slider-avatar.jpg" alt="avatar">
+                    <span class="products__item-name">EchoTheme</span>
+                  </a>
+                  <span class="products__item-category products__item-category--psd">PSD</span>
                 </div>
                 <div class="products__item-paragraph">
                   Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
@@ -425,13 +434,11 @@
                   Bryson - Portfolio Template
                 </div>
                 <div class="products__item-info">
-                  <img class="products__item-avatar" src="images/content/slider-avatar.jpg"></img>
-                  <div class="products__item-name">
-                    Artcorner
-                  </div>
-                  <div class="products__item-category products__item-category--html">
-                    HTML
-                  </div>
+                  <a class="products-slider__avatar-link" href="#">
+                    <img class="products__item-avatar" src="images/content/slider-avatar.jpg" alt="avatar">
+                    <span class="products__item-name">Artcorner</span>
+                  </a>
+                  <span class="products__item-category products__item-category--html">HTML</span>
                 </div>
                 <div class="products__item-paragraph">
                   Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
@@ -470,13 +477,11 @@
                   E-commerce Shopping Cart
                 </div>
                 <div class="products__item-info">
-                  <img class="products__item-avatar" src="images/content/slider-avatar.jpg"></img>
-                  <div class="products__item-name">
-                    Design-Hub
-                  </div>
-                  <div class="products__item-category">
-                    Plugin
-                  </div>
+                  <a class="products-slider__avatar-link" href="#">
+                    <img class="products__item-avatar" src="images/content/slider-avatar.jpg" alt="avatar">
+                    <span class="products__item-name"> Design-Hub</span>
+                  </a>
+                  <span class="products__item-category">Plugin</span>
                 </div>
                 <div class="products__item-paragraph">
                   Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
@@ -515,13 +520,11 @@
                   Marketify Coffee Shop
                 </div>
                 <div class="products__item-info">
-                  <img class="products__item-avatar" src="images/content/slider-avatar.jpg"></img>
-                  <div class="products__item-name">
-                    AazzTech
-                  </div>
-                  <div class="products__item-category products__item-category--psd">
-                    PSD
-                  </div>
+                  <a class="products-slider__avatar-link" href="#">
+                    <img class="products__item-avatar" src="images/content/slider-avatar.jpg" alt="avatar">
+                    <span class="products__item-name">AazzTech</span>
+                  </a>
+                  <span class="products__item-category products__item-category--psd">PSD</span>
                 </div>
                 <div class="products__item-paragraph">
                   Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
@@ -560,13 +563,11 @@
                   Bryson - Portfolio Template
                 </div>
                 <div class="products__item-info">
-                  <img class="products__item-avatar" src="images/content/slider-avatar.jpg"></img>
-                  <div class="products__item-name">
-                    Coder-Lab
-                  </div>
-                  <div class="products__item-category products__item-category--html">
-                    HTML
-                  </div>
+                  <a class="products-slider__avatar-link" href="#">
+                    <img class="products__item-avatar" src="images/content/slider-avatar.jpg" alt="avatar">
+                    <span class="products__item-name">Coder-Lab</span>
+                  </a>
+                  <span class="products__item-category products__item-category--html">HTML</span>
                 </div>
                 <div class="products__item-paragraph">
                   Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
@@ -607,12 +608,12 @@
           <div class="followers__item">
             <div class="followers__img-wrapper">
               <img class="followers__item-img" src="images/content/products-img2.jpg">
+              <!-- start hover block -->
               <div class="followers__item-hover">
-                <!-- start hover block -->
                 <a class="followers__hover-btn" href="#">More Info</a>
                 <a class="followers__hover-btn" href="#">Live Demo</a>
-                <!-- end hover block -->
               </div>
+              <!-- end hover block -->
             </div>
             <div class="followers__item-content">
               <div class="followers__item-text">
@@ -801,7 +802,30 @@
 
     <section class="statistics">
       <div class="container">
+        <div class="statistics__inner">
+          <div class="statistics__item">
+            <span class="statistics__number">38,436</span>
+            <span class="statistics__text">items for sale</span>
+          </div>
+          <div class="statistics__item">
+            <span class="statistics__number statistics__number--blue">3,736</span>
+            <span class="statistics__text">total sales</span>
+          </div>
+          <div class="statistics__item">
+            <span class="statistics__number statistics__number--green">2,736</span>
+            <span class="statistics__text">happy customers</span>
+          </div>
+          <div class="statistics__item">
+            <span class="statistics__number statistics__number--red">25,736</span>
+            <span class="statistics__text">members</span>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <section class="reasons">
+      <div class="container">
+        
       </div>
     </section>
   </main>
